crates/dsrs-macros/tests/ui/signature_trait_object.rs
use dsrs_macros::Signature;

#[derive(Signature)]
struct SignatureTraitObject {
    #[input]
    value: Box<dyn std::fmt::Debug>,

    #[output]
    answer: String,
}

fn main() {}
